style/style.css
body {
    font-family: "Roboto Condensed", sans-serif;
    position: relative;
    left: 50%;
    width: 980px;
    margin-left: -490px;
}

.heading {
    text-align: center;
}

.logo {
    background-color: #ffb4431b;
    padding: 1em;
    border-top-color: orange;
    border-top-width: 1px;
    border-top-style: solid;
}

.poster {
    text-align: center;
}

video {
    border-radius: 10px 10px 10px 10px;
}

.link {
    color: red;
    border-left-width: 1px;
    border-left-style: solid;
    border-left-color: orange;
    padding-left: 1em;
}

.border {
    border-bottom-color: lightblue;
    border-bottom-width: 1px;
    border-bottom-style: solid;
    padding-bottom: 1em;
}

video {
    width: 600px;
    height: 400px;
    box-shadow: 0;
    box-shadow: 4px 4px 8px black;
}

